add github repo

--- a/build.config
+++ b/build.config
@@ -1,6 +1,7 @@
+DOCKER_USERNAME=masa4u
+IMAGE_NAME=trixie-llvm20-python3.12
 PYTHON_TARBALL=Python-3.12.11.tgz
 ARTIFACTS_DIR=deps
-BASE_TAG=llvm20.1-python3.12
 REGISTRY=
 PUSH=false
 SLIM=true
