--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -55,10 +55,12 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
         continue-on-error: true
 
-      - name: Push images (optional)
+      - name: Push images to Docker Hub (optional)
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           if [ -n "${{ secrets.DOCKER_USERNAME }}" ]; then
-            python scripts/run_build.py --push --registry ${{ secrets.DOCKER_REGISTRY || secrets.DOCKER_USERNAME }}
+            # Uses DOCKER_USERNAME and IMAGE_NAME from build.config
+            # Pushes to: masa4u/trixie-llvm20-python3.12 and masa4u/trixie-llvm20-python3.12-slim
+            python scripts/run_build.py --push
           fi
         continue-on-error: true
